# eznas

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  CURRENT.md  DEVELOPMENT_GUIDE.md  Dockerfile  Dockerfile.dev  ENRICHMENT.md  GETTING_STARTED.md  MOVIES.md  PROVISIONING_FIXES.md  README.md  RECOVER.md  TESTING.md  TODO.md  TV.md  convert_ui.py  docker-compose.bootstrap.yml  docker-compose.dev.yml  install.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  stack.yaml  state.json  state.json.bak  state.json.example  test_pipeline.py  test_type_annotations.py
backups/: stack.yaml.20260211_010348  state.json.20260211_010348
docs/archive/: PERMISSIONS.md  REMEDIATION_PLAN.md
frontend/: index.html  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  tokens.css
nas_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
orchestrator/: __init__.py  app.py  auth.py  constants.py  models.py  proxy.py  rendering.py  storage.py  system.py  validators.py
orchestrator/clients/: arr.py  base.py  bazarr.py  jellyfin.py  jellyseerr.py  prowlarr.py  qb.py  radarr.py  retry.py  sonarr.py  util.py
orchestrator/converge/: diff.py  runner.py  (+3 more)
scripts/: dev.sh  jellyfin_setup.py  jellyfin_studio_collections.py  process_orphans.py  process_remaining.sh  remux_bloated.sh  rename_and_sync.py  reprocess_bdmv.py  strip_russian_remux.sh  targeted_sub_search.py
templates/: docker-compose.yml.j2  env.j2
tests/: README.md  conftest.py  test_complete_setup.py  test_verification.py  test_verification_system.py
tmp/: auth.js
ui/: index.html
(+205 files in other folders)
